--- a/SchwarzOCP/Project.toml
+++ b/SchwarzOCP/Project.toml
@@ -2,3 +2,9 @@
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
+[compat]
+julia = "1.5"
+Ipopt = "0.6.5"
+LaTeXStrings "1.2.1"
+Plots = "1.11.0"
