--- a/InfiniteDimensionalCases/CaseStudy2/Project.toml
+++ b/InfiniteDimensionalCases/CaseStudy2/Project.toml
@@ -6,6 +6,6 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 
 [compat]
-julia = "~1"
-InfiniteOpt = "=0.3.2"
-JuMP = "=0.21.6"
+julia = "1"
+InfiniteOpt = "0.4.1"
+JuMP = "0.21.8"
