--- a/PlasmoData_examples/Project.toml
+++ b/PlasmoData_examples/Project.toml
@@ -1,11 +1,11 @@
 name = "PlasmoData_examples"
-uuid = "7f721550-9c48-4e43-972c-c13e4e3f702a"
+uuid = "04c72278-6a94-4321-9b7f-12d02bb9e179"
 authors = ["dlcole3 <dlcole3@wisc.edu>"]
 version = "0.1.0"
 
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
-DataGraphPlots = "edc0d1de-cbb6-43e5-80c3-282b59182d08"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
@@ -20,7 +20,7 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 PlasmoData = "18473d7d-a938-4be0-a189-2b040dfe6be7"
+PlasmoDataPlots = "edc0d1de-cbb6-43e5-80c3-282b59182d08"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
